--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 postgresql:
   image: sameersbn/postgresql:9.4-3
+  mem_limit: 512m
   environment:
     - DB_USER=gitlab
     - DB_PASS=password
     - DB_NAME=gitlabhq_production
-  volumes:
-    - /srv/docker/gitlab/postgresql:/var/lib/postgresql
+  dns: 192.168.122.155
 gitlab:
   image: sameersbn/gitlab:7.13.5
+  mem_limit: 1024m
+  dns: 192.168.122.155
   links:
     - redis:redisio
     - postgresql:postgresql
@@ -32,9 +34,7 @@ gitlab:
     - GITLAB_EMAIL_REPLY_TO=noreply@example.com
     - GITLAB_BACKUPS=daily
     - GITLAB_BACKUP_TIME=01:00
-  volumes:
-    - /srv/docker/gitlab/gitlab:/home/git/data
 redis:
   image: sameersbn/redis:latest
-  volumes:
-    - /srv/docker/gitlab/redis:/var/lib/redis
+  mem_limit: 512m
+  dns: 192.168.122.155
